[gd_scene load_steps=20 format=2]

[ext_resource path="res://0x72_16x16DungeonTileset.v4.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://hammer.tscn" type="PackedScene" id=3]
[ext_resource path="res://glass-shatter.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets(late)/PngItem_1071943.png" type="Texture" id=5]
[ext_resource path="res://assets(late)/footsteps1.mp3" type="AudioStream" id=6]
[ext_resource path="res://winsfx.mp3" type="AudioStream" id=7]
[ext_resource path="res://de4ath.mp3" type="AudioStream" id=8]

[sub_resource type="InputEventAction" id=1]
action = "space"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "space"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventAction" id=5]
action = "shift"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="CircleShape2D" id=7]
radius = 7.0

[sub_resource type="Animation" id=8]
length = 100.0
tracks/0/type = "value"
tracks/0/path = NodePath("char_sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("skullEmoji:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("char_sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=10]
length = 0.2
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("char_sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, 0.0, -5.0, 0.0 ]
}

[sub_resource type="Animation" id=11]
length = 30.0
tracks/0/type = "value"
tracks/0/path = NodePath("char_sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 0.5, 0.5, 0.5 ),
"update": 0,
"values": [ 0.0, 360.0, 720.0 ]
}

[node name="player" type="KinematicBody2D"]
position = Vector2( 55, 36 )
script = ExtResource( 2 )

[node name="skullEmoji" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -5 )
texture = ExtResource( 1 )
hframes = 16
vframes = 16
frame = 49

[node name="char_sprite" type="Sprite" parent="."]
position = Vector2( 4.76837e-07, -8 )
scale = Vector2( 1.125, 1.125 )
texture = ExtResource( 1 )
hframes = 16
vframes = 16
frame = 176

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_speed = 3.0

[node name="victory_ui" type="Sprite" parent="Camera2D"]
position = Vector2( -7, 95 )
z_index = 1

[node name="vicroy" type="Sprite" parent="Camera2D/victory_ui"]
position = Vector2( 12, -138 )
scale = Vector2( 0.0772569, 0.0772569 )
z_index = 2
texture = ExtResource( 5 )

[node name="Button" type="Button" parent="Camera2D/victory_ui"]
process_priority = 1
margin_left = -103.036
margin_top = -54.0217
margin_right = 28.9645
margin_bottom = -10.0217
rect_scale = Vector2( 0.5, 0.5 )
button_mask = 3
shortcut = SubResource( 2 )
text = "EXIT(SPACE)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="death_ui" type="Sprite" parent="Camera2D"]
position = Vector2( -7, 95 )
z_index = 1

[node name="Button" type="Button" parent="Camera2D/death_ui"]
process_priority = 1
margin_left = -103.036
margin_top = -54.0217
margin_right = 28.9645
margin_bottom = -10.0217
rect_scale = Vector2( 0.5, 0.5 )
button_mask = 3
shortcut = SubResource( 4 )
text = "EXIT(SPACE)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Camera2D/death_ui"]
process_priority = 1
margin_left = 53.0
margin_top = -54.0
margin_right = 185.0
margin_bottom = -10.0
rect_scale = Vector2( 0.5, 0.5 )
button_mask = 3
shortcut = SubResource( 6 )
text = "RETRY(SHIFT)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6 )
shape = SubResource( 7 )

[node name="porkifier" parent="CollisionShape2D2" instance=ExtResource( 3 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="CollisionShape2D2/porkifier"]
position = Vector2( 1, 0 )
stream = ExtResource( 4 )
attenuation = 1.03527

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/deadasf = SubResource( 8 )
anims/idle = SubResource( 9 )
anims/walk = SubResource( 10 )
anims/won = SubResource( 11 )

[node name="footstep-noises" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -30.0

[node name="winyo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="deadashell" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[connection signal="pressed" from="Camera2D/victory_ui/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Camera2D/death_ui/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Camera2D/death_ui/Button2" to="." method="_on_Button2_pressed"]
